<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <ImageView
        android:id="@+id/pp"
        android:layout_width="wrap_content"
        android:layout_height="228dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/default_pp" />

    <EditText
        android:layout_marginBottom="16dp"
        android:id="@+id/fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/sn"
        android:hint="@string/second_name"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:hint="@string/email"
        android:id="@+id/mail"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:hint="@string/password"
        android:id="@+id/pass"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/register"
        />
</LinearLayout>
</ScrollView>