<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddPostActivity">

    <ImageButton
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/clikc_to_upload" />
    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title"
        android:layout_margin="16dp"/>
    <EditText
        android:id="@+id/addDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_details"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/addPost"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"/>

</LinearLayout>